--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -5,9 +5,7 @@ name: .NET
 
 on:
   push:
-    branches: [ "master", "develop" ]
-  pull_request:
-    branches: [ "master", "develop" ]
+    branches: [ "master" ]
 
 jobs:
   build:
