Add support for .netstandard, .netcoreapp, and newer versions of .NET

--- a/Sources/ValueGuard/ValueGuard.csproj
+++ b/Sources/ValueGuard/ValueGuard.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
+        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net6.0;net5.0;net7.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Anton Ivanchenko</Authors>
+        <Description>A library providing Guard Clauses to ensure the validity of method parameters, enhancing code reliability and correctness</Description>
         <RepositoryUrl>https://github.com/anton-ivanchenko/ValueGuard</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
